--- a/web-page/index.html
+++ b/web-page/index.html
@@ -15,7 +15,7 @@ font-family: Tahoma, Verdana, Arial, sans-serif; }
  added more content in paragraph
  adding next line</p>
 
-<h1> Narendra Singh </h1>
+<h1> Shubham Singh Baghel </h1>
 <h2> Profession: Software Engineer </h2>
 <h3> Lives in Pune </h3>
 
